fix: correct align of user image in history block

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,14 +6,19 @@
   margin-bottom: 8px;
 }
 
-.gh-username img {
-  width: 32px;
-}
-
 #profile-bio {
   margin-top: 10px;
 }
 
-.timeline .timeline-item {
-  padding-bottom: 1em;
+.timeline {
+  .timeline-item {
+    padding-bottom: 1em;
+    .timeline-content {
+      width: 100%;
+    }
+  }
+}
+
+.media-content {
+  min-width: 0;
 }
